name:          planning
version:       0.0.1
category:      Planning
license:       AllRightsReserved
author:        Jann Mueller
maintainer:    Jann Mueler (j.mueller.11@alumni.ucl.ac.uk)
stability:     provisional
homepage:      https://github.com/j-mueller/planning
bug-reports:   https://github.com/j-mueller/planning/issues
copyright:     Copyright (C) 2018 Jann Mueller
build-type:    Simple
cabal-version: >= 1.10
synopsis:      Bayesian project management
description:   Bayesian project management

source-repository head
  type: git
  location: https://github.com/j-mueller/planning

executable planning
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: 
    base,
    containers -any,
    hakaru -any,
    mtl -any,
    mwc-random -any,
    text -any,
    transformers -any